// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icon store | reducer adding iconSets to empty store 1`] = `
{
  "iconSets": {
    "example/theme": {
      "icons": [
        {
          "label": "Search",
          "name": "search",
          "source": "test-string",
        },
      ],
      "label": "Example",
      "name": "example/theme",
    },
  },
}
`;

exports[`icon store | reducer adding iconSets to existing store 1`] = `
{
  "iconSets": {
    "dashicons": {
      "icons": [
        {
          "label": "Menu",
          "name": "dashicons-menu",
        },
      ],
      "label": "Dashicons",
      "name": "dashicons",
    },
    "example/theme": {
      "icons": [
        {
          "label": "Search",
          "name": "search",
          "source": "test-string",
        },
      ],
      "label": "Example",
      "name": "example/theme",
    },
  },
}
`;

exports[`icon store | reducer removing iconSets 1`] = `
{
  "iconSets": {
    "theme": {
      "icons": [
        {
          "label": "Menu",
          "name": "theme-menu",
        },
      ],
      "label": "Theme",
      "name": "theme",
    },
  },
}
`;
